package com.project.jf.moneo.domain.model

enum class TransactionType {
    EXPENSE,
    INCOME,
    PAYMENT,
}